<resources>
    <string name="app_name">Let\'s Chat</string>
    <string name="logo_name">Let\'s Chat</string>
    <string name="have_account_button">Already have an Account?</string>
    <string name="need_new_account_button">Need new Account?</string>
    <string name="create_button">Create</string>
    <string name="name_hint">Name..</string>
    <string name="email_hint">Email...</string>
    <string name="passward_hint">Passward...</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="logout_button">Logout</string>
    <string name="settings_button">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status_settings">status of user</string>
    <string name="user_name_settings">User Name</string>
    <string name="change_image_settings">Change Image</string>
    <string name="change_status_settings">Change status</string>
    <string name="change_status_hint">Change status here</string>
    <string name="save_changes_button">Save Changes</string>
    <string name="all_users_button">All Users</string>
</resources>
