<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c6915e"
    tools:context=".loginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/logo_name"
        android:textAllCaps="false"
        android:textSize="50sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/editText_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="166dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textMultiLine"
        android:padding="15dp" />

    <EditText
        android:id="@+id/editText_login_passward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="103dp"
        android:ems="10"
        android:hint="@string/passward_hint"
        android:inputType="textMultiLine"
        android:padding="15dp" />


    <Button
        android:id="@+id/button_login_signIn"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="#d95028"
        android:text="@string/sign_in_button"
        android:textAllCaps="false" />

</RelativeLayout>