<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/colorPrimaryDark">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image_settings"
        android:layout_width="211dp"
        android:layout_height="195dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:src="@drawable/default_profile"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="2dp" />

    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/settings_toolbar">

    </include>

    <TextView
        android:id="@+id/textView_settings_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="241dp"
        android:gravity="center"
        android:text="@string/user_name_settings"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_settings_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="197dp"
        android:gravity="center"
        android:text="@string/status_settings"
        android:textSize="20sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button_settings_changeImage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="#d95028"
        android:text="@string/change_image_settings"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button_settings_changeStatus"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:background="#d95028"
        android:text="@string/change_status_settings"
        android:textAllCaps="false" />

</RelativeLayout>